plugins {
    id 'java'
    id 'application'
}

application {
    mainClass = 'net.sleepy.Test4'
}

group = 'net.sleepy'
version = '1.0.0'
repositories {
    mavenCentral()
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
def rustDir = file('src/main/rust')
def rustTargetDir = file('src/main/rust/target/release')
def generatedDir = file("$buildDir/generated")

dependencies {
    implementation 'org.postgresql:postgresql:42.7.7'
    implementation 'com.univocity:univocity-parsers:2.9.1'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
    implementation 'org.apache.logging.log4j:log4j-api:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'com.zaxxer:HikariCP:5.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
}
sourceSets {
    main {
        java {
            srcDirs += generatedDir
        }
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--enable-native-access=ALL-UNNAMED',
            // If you ever move to a named module, replace ALL-UNNAMED with your module name
    ]
}

tasks.withType(JavaExec).configureEach {
    // Tells Java to look in the Rust release folder for .so files
    systemProperty "java.library.path", file("src/main/rust/target/release").absolutePath
}

tasks.register('buildRust', Exec) {
    workingDir rustDir

    commandLine 'cargo', 'build', '--release'

    inputs.dir("${rustDir}/src")
    inputs.file("${rustDir}/Cargo.toml")

    outputs.file("${rustTargetDir}/libprice_stat.so")
}

tasks.register('generateHeaders', Exec) {
    dependsOn 'buildRust'
    workingDir rustDir

    commandLine 'cbindgen',
            '--config', "${projectDir}/cbindgen.toml",
            '--crate', 'price_stat',
            '--output', "target/release/bindings.h",
            "."  // This tells cbindgen to look in the current workingDir (src/main/rust)

    inputs.dir("${rustDir}/src")
    inputs.file("${rustDir}/Cargo.toml")
    inputs.file("${projectDir}/cbindgen.toml")

    outputs.file("${rustTargetDir}/bindings.h")
}

tasks.register('generatePanamaBindings', Exec) {
    dependsOn 'generateHeaders'

    def jextractPath = System.getenv('JEXTRACT_HOME') ? "${System.getenv('JEXTRACT_HOME')}/bin/jextract" : '/opt/jextract/bin/jextract'

    inputs.file("${rustTargetDir.absolutePath}/bindings.h")
    outputs.dir(file("${generatedDir.absolutePath}/net/sleepy/nativebind"))

    doFirst {
        generatedDir.mkdirs()
    }

    executable jextractPath
    args(
            '--target-package', 'net.sleepy.nativebind',
            '--output', generatedDir.absolutePath,
            "${rustTargetDir.absolutePath}/bindings.h"
    )
}
tasks.register('cleanRust', Exec) {
    workingDir rustDir
    commandLine 'cargo', 'clean'
}

clean.dependsOn 'cleanRust'

compileJava {
    dependsOn 'generatePanamaBindings'
}
test {
    useJUnitPlatform()
}